// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result component renders correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-label="Play episode: Test Episode Title"
        role="button"
        tabindex="0"
      >
        <td>
          <a
            aria-label="Stream or download: Test Episode Title"
            href="https://example.com/episode.mp3"
          >
            Test Episode Title
          </a>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime="2023-05-15T12:00:00Z"
          >
            Invalid Date
          </time>
        </td>
        <td
          class="duration-column"
        >
          01:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Result component renders with empty duration and date 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-label="Play episode: Test Episode Title"
        role="button"
        tabindex="0"
      >
        <td>
          <a
            aria-label="Stream or download: Test Episode Title"
            href="https://example.com/episode.mp3"
          >
            Test Episode Title
          </a>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime=""
          >
            
          </time>
        </td>
        <td
          class="duration-column"
        >
          00:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
